Метод получения всех клиентов. Предзаполнение таблицы Client.
