# src/main/resources/openapi.yml
@@ -29,7 +29,28 @@ paths:
               schema:
                 $ref: '#/components/schemas/PingResponse'
 
-  /clients/{inn}:
+  /clients:
+    get:
+      tags:
+        - clients
+      summary: Все клиенты
+      description: Все клиенты
+      operationId: getClients
+      responses:
+        200:
+          description: Успешное получение всех клиентов
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientListResponse'
+        400:
+          $ref: '#/components/responses/400'
+        404:
+          $ref: '#/components/responses/404'
+        500:
+          $ref: '#/components/responses/500'
+
+  /clients/filter:
     get:
       tags:
         - clients
@@ -38,7 +59,7 @@ paths:
       operationId: findClientByInn
       parameters:
         - name: inn
-          in: path
+          in: query
           description: ИНН клиента
           required: true
           schema:
@@ -129,3 +150,8 @@ components:
           type: string
           minLength: 12
           maxLength: 12
+
+    ClientListResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/ClientResponse'
